overflow fixed

--- a/src/styles/Account.css
+++ b/src/styles/Account.css
@@ -1,6 +1,10 @@
 .account-container {
   display: grid;
+  position: relative;
   grid-template-columns: repeat(3, 1fr);
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
 }
 
 .svg {
@@ -17,7 +21,6 @@
   align-items: center;
   height: 100dvh;
   padding: 1rem;
-  background-color: var(--bg-color);
   grid-column: 2;
   max-width: 400px;
 }
@@ -85,7 +88,7 @@
   width: 100%;
 }
 
-#Layer_2 {
+#Layer_left {
   position: absolute;
   top: 0;
   right: -25%;
@@ -93,7 +96,7 @@
   fill: var(--accent-orange);
   transform: rotate(20.05deg);
 }
-#Layer_3 {
+#Layer_right {
   position: absolute;
   top: 0;
   left: -25%;
